force-app/main/default/objects/Trecho__c/fields/StatusAtendimento__c.field-meta.xml
<CustomField>
    <fullName>StatusAtendimento__c</fullName>
    <label>Status do atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nao Iniciado</fullName>
                <default>true</default>
                <label>Não Iniciado</label>
            </value>
            <value>
                <fullName>Pesagem Iniciada</fullName>
                <label>Checkin Aberto</label>
            </value>
            <value>
                <fullName>Pesagem Finalizada</fullName>
                <label>Checkin Finalizado</label>
            </value>
            <value>
                <fullName>Ajuste Solicitado</fullName>
            </value>
            <value>
                <fullName>MTA Liberado</fullName>
                <label>Impressão MTA Liberada</label>
            </value>
            <value>
                <fullName>Passageiros Prontos</fullName>
            </value>
            <value>
                <fullName>Embarque Autorizado</fullName>
            </value>
            <value>
                <fullName>Passageiros Embarcados</fullName>
            </value>
            <value>
                <fullName>Ajuste</fullName>
                <isActive>false</isActive>
                <label>Ajuste</label>
            </value>
            <value>
                <fullName>Ajuste Realizado</fullName>
                <isActive>false</isActive>
                <label>Ajuste Realizado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>