force-app/main/default/objects/Trecho__c/fields/StatusVoo__c.field-meta.xml
<CustomField>
    <fullName>StatusVoo__c</fullName>
    <description>Replica o Status do Voo no trecho</description>
    <formula>TEXT(Voo__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Replica o Status do Voo no trecho</inlineHelpText>
    <label>Status do Voo</label>
    <type>Text</type>
</CustomField>