force-app/main/default/objects/Trecho__c/fields/TemLocalMovel__c.field-meta.xml
<CustomField>
    <fullName>TemLocalMovel__c</fullName>
    <description>Informa de tem locais móveis no trecho</description>
    <formula>OR(
				ISPICKVAL(Origem__r.Categoria__c, &apos;Sonda&apos;),
				ISPICKVAL(Origem__r.Categoria__c, &apos;Sísmica&apos;),
				ISPICKVAL(Destino__r.Categoria__c, &apos;Sonda&apos;),
				ISPICKVAL(Destino__r.Categoria__c, &apos;Sísmica&apos;),
				ISPICKVAL(Origem__r.Categoria__c, &apos;PLSV&apos;),
				ISPICKVAL(Origem__r.Categoria__c, &apos;UMS&apos;),
				ISPICKVAL(Destino__r.Categoria__c, &apos;PLSV&apos;),
				ISPICKVAL(Destino__r.Categoria__c, &apos;UMS&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tem Local Móvel</label>
    <type>Checkbox</type>
</CustomField>