force-app/main/default/objects/Trecho__c/fields/TempoCortado__c.field-meta.xml
<CustomField>
    <fullName>TempoCortado__c</fullName>
    <description>Tempo entre o acionamento do motor nesse trecho e o corte do motor no trecho anterior.</description>
    <formula>IF(
				TEXT(TrechoAnterior__r.Tipo__c) != &apos;Translado&apos; &amp;&amp; NOT(ISBLANK(TrechoAnterior__r.Cut__c)),
				(Ligado__c - TrechoAnterior__r.Cut__c ) * 24 * 60,
				0
)</formula>
    <inlineHelpText>Tempo entre o acionamento do motor nesse trecho e o corte do motor no trecho anterior.</inlineHelpText>
    <label>Tempo cortado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>