force-app/main/default/objects/Trecho__c/fields/TempoCruzeiro__c.field-meta.xml
<CustomField>
    <fullName>TempoCruzeiro__c</fullName>
    <description>Tempo de cruzeiro para o trecho</description>
    <inlineHelpText>Tempo de cruzeiro para o trecho</inlineHelpText>
    <label>Tempo de cruzeiro</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>