force-app/main/default/objects/Trecho__c/fields/TempoDecorrido__c.field-meta.xml
<CustomField>
    <fullName>TempoDecorrido__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tempo decorrido do Voo até esse Trecho</description>
    <inlineHelpText>Tempo decorrido do Voo até esse Trecho</inlineHelpText>
    <label>Tempo Decorrido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>