force-app/main/default/objects/Trecho__c/fields/TempoMissao__c.field-meta.xml
<CustomField>
    <fullName>TempoMissao__c</fullName>
    <description>Tempo de missão para o trecho</description>
    <inlineHelpText>Tempo de missão para o trecho</inlineHelpText>
    <label>Tempo de missão</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>