force-app/main/default/objects/Trecho__c/fields/TempoNavegacao__c.field-meta.xml
<CustomField>
    <fullName>TempoNavegacao__c</fullName>
    <formula>If(AND(NOT(ISNULL(Decolagem__c)),NOT(ISNULL(Pouso__c))),ABS((Decolagem__c-Pouso__c)*24*60),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo de Navegação</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>