force-app/main/default/objects/Trecho__c/fields/TempoSolo__c.field-meta.xml
<CustomField>
    <fullName>TempoSolo__c</fullName>
    <description>Tempo de solo para o trecho</description>
    <inlineHelpText>Tempo de solo para o trecho</inlineHelpText>
    <label>Tempo de solo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>