force-app/main/default/objects/Trecho__c/fields/TempoSoloFormula__c.field-meta.xml
<CustomField>
    <fullName>TempoSoloFormula__c</fullName>
    <formula>((UNIXTIMESTAMP(Decolagem__c) - SECOND(TIMEVALUE(Decolagem__c)))
- (UNIXTIMESTAMP(PousoAnterior__c) - SECOND(TIMEVALUE(PousoAnterior__c))))/60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo solo (minutos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>