force-app/main/default/objects/Trecho__c/fields/TempoVoado__c.field-meta.xml
<CustomField>
    <fullName>TempoVoado__c</fullName>
    <description>Tempo voado nesse trecho</description>
    <formula>IF(
    DescontarTrecho__c,   
	    0,
    IF(
        AND(NOT(ISBLANK(Ligado__c)), NOT(ISBLANK(Cut__c))),
        (Cut__c - Ligado__c)*24*60,
								IF(
												AND(NOT(ISBLANK(Ligado__c)), ISBLANK(Cut__c)),
												(Pouso__c - Ligado__c)*24*60,
												IF(
																AND(ISBLANK(Ligado__c), NOT(ISBLANK(Cut__c))),
																(Cut__c - TrechoAnterior__r.Pouso__c)*24*60,
																(Pouso__c - TrechoAnterior__r.Pouso__c)*24*60
            )
        )
    )
)</formula>
    <inlineHelpText>Time flown on this leg</inlineHelpText>
    <label>Tempo Voado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>