force-app/main/default/objects/Trecho__c/fields/TextoNumeroVoo__c.field-meta.xml
<CustomField>
    <fullName>TextoNumeroVoo__c</fullName>
    <description>Espelha o número do voo para template</description>
    <formula>Voo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Texto Número do Voo</label>
    <type>Text</type>
</CustomField>