force-app/main/default/objects/Trecho__c/fields/TextoRotaVoo__c.field-meta.xml
<CustomField>
    <fullName>TextoRotaVoo__c</fullName>
    <description>Espelha Rota do voo para template</description>
    <formula>Voo__r.RotaAbreviada__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Texto Rota do Voo</label>
    <type>Text</type>
</CustomField>