force-app/main/default/objects/Trecho__c/fields/TextoTripulacao__c.field-meta.xml
<CustomField>
    <fullName>TextoTripulacao__c</fullName>
    <description>Espelha em texto os nomes da tripulação para templeta de email</description>
    <formula>&apos;Cmte. &apos; &amp;  Voo__r.Comandante__c &amp; &apos; / Copiloto &apos; &amp;  Voo__r.Copiloto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Texto Tripulação</label>
    <type>Text</type>
</CustomField>