force-app/main/default/objects/Trecho__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Passageiro - Transporte apenas de passageiros no trecho
Carga e passageiro - Transporte de passageiros e carga no trecho
Cargueiro - Transporte apenas de carga no trecho
Translado - Translado da aeronave para reposicionamento
Translado com passageiro - Translado da aeronave para reposicionamento com passageiro a bordo
Comitiva</description>
    <inlineHelpText>Transporte apenas de passageiros no trecho
Transporte de passageiros e carga no trecho
Transporte apenas de carga no trecho
Translado da aeronave para reposicionamento
Translado da aeronave para reposicionamento com passageiro
Comitiva</inlineHelpText>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passageiros</fullName>
            </value>
            <value>
                <fullName>Cargueiro</fullName>
            </value>
            <value>
                <fullName>Passageiros e Cargas</fullName>
            </value>
            <value>
                <fullName>Translado</fullName>
            </value>
            <value>
                <fullName>Translado com passageiro</fullName>
            </value>
            <value>
                <fullName>Comitiva</fullName>
            </value>
            <value>
                <fullName>Sanitário</fullName>
            </value>
            <value>
                <fullName>Treinamento</fullName>
            </value>
            <value>
                <fullName>SAR</fullName>
            </value>
            <value>
                <fullName>MEDVAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>