force-app/main/default/objects/Trecho__c/fields/Tipo_de_Voo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Voo__c</fullName>
    <description>Tipo de Voo (Passageiros, Carga, etc)</description>
    <formula>TEXT(Voo__r.Tipo__c)</formula>
    <inlineHelpText>Tipo de Voo (Passageiros, Carga, etc)</inlineHelpText>
    <label>Tipo de Voo</label>
    <type>Text</type>
</CustomField>