force-app/main/default/objects/Trecho__c/fields/TipoAtrasoContrato__c.field-meta.xml
<CustomField>
    <fullName>TipoAtrasoContrato__c</fullName>
    <label>Tipo de Atraso do Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acionamento</fullName>
            </value>
            <value>
                <fullName>Decolagem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>