force-app/main/default/objects/Trecho__c/fields/TipoHoraFaturamento__c.field-meta.xml
<CustomField>
    <fullName>TipoHoraFaturamento__c</fullName>
    <label>Tipo de hora de Faturamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acionamento-Corte</fullName>
            </value>
            <value>
                <fullName>Decolagem-Pouso Integral</fullName>
            </value>
            <value>
                <fullName>Decolagem-Pouso Navegação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>