force-app/main/default/objects/Trecho__c/fields/TituloLayoutCompacto__c.field-meta.xml
<CustomField>
    <fullName>TituloLayoutCompacto__c</fullName>
    <formula>Origem__r.CodigoLocal__c &amp; &apos; &gt; &apos; &amp; Destino__r.CodigoLocal__c &amp; &apos; - &apos; &amp;
Voo__r.Prefixo__r.Name &amp; &apos; - &apos; &amp;
TEXT(DAY(DATEVALUE(Voo__r.DataVoo__c))) &amp; &quot;/&quot; &amp; TEXT(MONTH(DATEVALUE(Voo__r.DataVoo__c))) &amp; &quot;/&quot; &amp; TEXT(YEAR(DATEVALUE(Voo__r.DataVoo__c)))</formula>
    <label>Título Layout Compacto</label>
    <type>Text</type>
</CustomField>