force-app/main/default/objects/Trecho__c/fields/TrechoAnterior__c.field-meta.xml
<CustomField>
    <fullName>TrechoAnterior__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Referência ao trecho anterior</description>
    <inlineHelpText>Referência ao trecho anterior</inlineHelpText>
    <label>Trecho Anterior</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Voo__c</field>
            <operation>equals</operation>
            <valueField>$Source.Voo__c</valueField>
        </filterItems>
        <infoMessage>Só pode ser Trecho Anterior outro do mesmo voo</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Trecho__c</referenceTo>
    <relationshipLabel>Trechos</relationshipLabel>
    <relationshipName>TrechoAnterior</relationshipName>
    <type>Lookup</type>
</CustomField>