force-app/main/default/objects/Trecho__c/fields/UltimoTrecho__c.field-meta.xml
<CustomField>
    <fullName>UltimoTrecho__c</fullName>
    <formula>OrdemExecucao__c = Voo__r.OrdemExecucaoUltimoTrecho__c</formula>
    <label>Último Trecho</label>
    <type>Checkbox</type>
</CustomField>