force-app/main/default/objects/Trecho__c/fields/Voo__c.field-meta.xml
<CustomField>
    <fullName>Voo__c</fullName>
    <description>Voo ao qual o trecho pertence</description>
    <inlineHelpText>Voo ao qual o trecho pertence</inlineHelpText>
    <label>Voo</label>
    <referenceTo>Voo__c</referenceTo>
    <relationshipLabel>Trechos</relationshipLabel>
    <relationshipName>Trechos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>