force-app/main/default/objects/Trecho__c/fields/VooCancelado__c.field-meta.xml
<CustomField>
    <fullName>VooCancelado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcado quando o voo for cancelado</description>
    <inlineHelpText>Marcado quando o voo for cancelado</inlineHelpText>
    <label>Voo cancelado</label>
    <type>Checkbox</type>
</CustomField>