force-app/main/default/objects/Trecho__c/validationRules/aprovadoSigNaoPodeAlterar.validationRule-meta.xml
<ValidationRule>
    <fullName>aprovadoSigNaoPodeAlterar</fullName>
    <active>true</active>
    <errorConditionFormula>and(Voo__r.StatusSig__c &gt; 1,
OR(ISCHANGED(Ligado__c),
ISCHANGED(Decolagem__c),
ISCHANGED(Pouso__c),
ISCHANGED(Cut__c)),
$Profile.Name != $Label.AdministradorDoSistema)</errorConditionFormula>
    <errorMessage>Esse registro não pode ser editado. Voo está em processo de aprovação no SIG.</errorMessage>
</ValidationRule>