force-app/main/default/objects/Trecho__c/validationRules/CheckinFinalizadoPesoPassageiros.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckinFinalizadoPesoPassageiros</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(StatusAtendimento__c),
TEXT(StatusAtendimento__c) == &apos;Pesagem Finalizada&apos;,
 (QtdPassageirosEmbarcando__c &lt;&gt;
 QtdCheckIn__c -(QtdNoShow__c + QtdPassageirosTransferidos__c + QtdRetirado__c)))</errorConditionFormula>
    <errorMessage>Informe o peso dos passageiros</errorMessage>
</ValidationRule>