force-app/main/default/objects/Trecho__c/validationRules/OrigemDestinoDiferente.validationRule-meta.xml
<ValidationRule>
    <fullName>OrigemDestinoDiferente</fullName>
    <active>false</active>
    <errorConditionFormula>Origem__c = Destino__c</errorConditionFormula>
    <errorDisplayField>Destino__c</errorDisplayField>
    <errorMessage>O Destino deve ser diferente da Origem</errorMessage>
</ValidationRule>