force-app/main/default/objects/Trecho__c/validationRules/ProdutoMalhaHorarioNaoEncontrados.validationRule-meta.xml
<ValidationRule>
    <fullName>ProdutoMalhaHorarioNaoEncontrados</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
 HasPMH__c = False
)</errorConditionFormula>
    <errorMessage>Não encontramos Produto/Malha para a origem e o destino informados, ou voo disponível para o horário informado.</errorMessage>
</ValidationRule>