force-app/main/default/objects/Trecho__c/listViews/TemLocalMovel.listView-meta.xml
<ListView>
    <fullName>TemLocalMovel</fullName>
    <columns>NAME</columns>
    <columns>Voo__c</columns>
    <columns>Origem__c</columns>
    <columns>Destino__c</columns>
    <columns>OrdemExecucao__c</columns>
    <columns>Status__c</columns>
    <columns>UltimoTrecho__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TemLocalMovel__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Tem local móvel</label>
</ListView>